--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,10 @@ branches:
 before_script:
   - npm install -g @angular/cli
 script:
-- ng lint
-- ng build --prod
+  - ng lint
+  - ng build --prod
+deploy:
+  skip_cleanup: true
+  provider: firebase
+  token:
+    secure: ""
