--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
+    "travis": "^0.1.1",
+    "travis-cli": "^1.0.9",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
