--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
-    "@angular/forms": "~8.2.13",
+    "@angular/forms": "^8.2.13",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.3.1",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "travis": "^0.1.1",
     "travis-cli": "^1.0.9",
