--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-mask": "^8.1.6",
     "rxjs": "~6.4.0",
     "travis": "^0.1.1",
     "travis-cli": "^1.0.9",
