--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
-    "@angular/forms": "~8.2.13",
+    "@angular/forms": "^8.2.13",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-mask": "^8.1.6",
     "rxjs": "~6.4.0",
     "travis": "^0.1.1",
     "travis-cli": "^1.0.9",
