--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "~8.2.13",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.13",
@@ -30,6 +31,8 @@
     "ngx-bootstrap": "^5.2.0",
     "ngx-mask": "^8.1.6",
     "ramda": "^0.26.1",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "rxjs": "~6.4.0",
     "travis": "^0.1.1",
     "travis-cli": "^1.0.9",
