--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "ramda": "^0.26.1",
     "redux": "4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-observable": "1.2.0",
+    "redux-observable-es6-compat": "^1.2.1",
     "rxjs": "~6.4.0",
     "travis": "^0.1.1",
     "travis-cli": "^1.0.9",
